--- a/package.json
+++ b/package.json
@@ -9,19 +9,46 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.53.4",
+    "@clerk/nextjs": "^6.34.1",
+    "@liveblocks/client": "^3.9.0",
+    "@liveblocks/node": "^3.9.0",
+    "@liveblocks/react": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.28.0",
+    "convex-helpers": "^0.1.104",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.546.0",
+    "nanoid": "^5.1.6",
+    "next": "15.5.6",
+    "next-themes": "^0.4.6",
+    "perfect-freehand": "^1.2.2",
+    "query-string": "^9.3.1",
     "react": "19.1.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5"
   }
 }
